added sounddetailpage, audio submit and a few packages

--- a/client/views/posts/sound_item.html
+++ b/client/views/posts/sound_item.html
@@ -6,5 +6,6 @@
 				<span>{{domain}}</span>
 			</h3>
 		</div> 
+		<a href="{{soundPagePath this}}" class="discuss btn">Discuss</a>
 	</div>
 </template>
